--- a/poromechanics/use_cases/fluid_pumping_2D/source/ProjectParameters.json
+++ b/poromechanics/use_cases/fluid_pumping_2D/source/ProjectParameters.json
@@ -21,9 +21,10 @@
         "echo_level":                         1,
         "clear_storage":                      false,
         "compute_reactions":                  false,
-        "move_mesh_flag":                     true,
+        "move_mesh_flag":                     false,
         "periodic_interface_conditions":      false,
         "reform_dofs_at_each_step":           false,
+        "nodal_smoothing":                    true,
         "block_builder":                      true,
         "solution_type":                      "Quasi-Static",
         "scheme_type":                        "Newmark",
@@ -73,8 +74,8 @@
             "node_output":         false,
             "skin_output":         false,
             "plane_output":        [],
-            "nodal_results":       ["DISPLACEMENT","WATER_PRESSURE","NORMAL_FLUID_FLUX"],
-            "gauss_point_results": ["CAUCHY_STRESS_TENSOR","FLUID_FLUX_VECTOR","DAMAGE_VARIABLE"]
+            "nodal_results":       ["DISPLACEMENT","WATER_PRESSURE","NORMAL_FLUID_FLUX","NODAL_CAUCHY_STRESS_TENSOR","NODAL_DAMAGE_VARIABLE","NODAL_JOINT_WIDTH","NODAL_JOINT_DAMAGE"],
+            "gauss_point_results": ["CAUCHY_STRESS_TENSOR","FLUID_FLUX_VECTOR","DAMAGE_VARIABLE","JOINT_WIDTH"]
         },
         "point_data_configuration":  []
     },
