Adapting ProjectParameters.json...

--- a/poromechanics/use_cases/fluid_pumping_2D_fracture/source/ProjectParameters.json
+++ b/poromechanics/use_cases/fluid_pumping_2D_fracture/source/ProjectParameters.json
@@ -5,17 +5,19 @@
         "domain_size":          2,
         "start_time":           0.0,
         "end_time":             3.0,
-        "time_step":            0.1,
+        "echo_level":           1,
         "parallel_type":        "OpenMP",
         "number_of_threads":    1,
         "fracture_propagation": true
     },
     "solver_settings": {
         "solver_type":                        "poromechanics_U_Pw_solver",
+        "model_part_name":                    "PorousDomain",
+        "domain_size":                        2,
+        "time_step":                          0.1,
         "model_import_settings":              {
             "input_type":       "mdpa",
-            "input_filename":   "fluid_pumping_2D_fracture",
-            "input_file_label": 0
+            "input_filename":   "fluid_pumping_2D_fracture"
         },
         "buffer_size":                        2,
         "echo_level":                         1,
