--- a/poromechanics/use_cases/consolidation_interface_3D/source/ProjectParameters.json
+++ b/poromechanics/use_cases/consolidation_interface_3D/source/ProjectParameters.json
@@ -5,17 +5,19 @@
         "domain_size":          3,
         "start_time":           0.0,
         "end_time":             1.0,
-        "time_step":            0.01,
+        "echo_level":           1,
         "parallel_type":        "OpenMP",
         "number_of_threads":    1,
         "fracture_propagation": false
     },
     "solver_settings": {
         "solver_type":                        "poromechanics_U_Pw_solver",
+        "model_part_name":                    "PorousDomain",
+        "domain_size":                        3,
+        "time_step":                          0.01,
         "model_import_settings":              {
             "input_type":       "mdpa",
-            "input_filename":   "consolidation_interface_3D",
-            "input_file_label": 0
+            "input_filename":   "consolidation_interface_3D"
         },
         "buffer_size":                        2,
         "echo_level":                         1,
