--- a/poromechanics/use_cases/fluid_pumping_2D/source/ProjectParameters.json
+++ b/poromechanics/use_cases/fluid_pumping_2D/source/ProjectParameters.json
@@ -1,19 +1,17 @@
 {
     "problem_data": {
         "problem_name":         "fluid_pumping_2D",
-        "model_part_name":      "PorousDomain",
-        "domain_size":          2,
         "start_time":           0.0,
         "end_time":             1.0e-3,
         "echo_level":           1,
         "parallel_type":        "OpenMP",
-        "number_of_threads":    1,
-        "fracture_propagation": false
+        "number_of_threads":    1
     },
     "solver_settings": {
         "solver_type":                        "poromechanics_U_Pw_solver",
         "model_part_name":                    "PorousDomain",
         "domain_size":                        2,
+        "start_time":                         0.0,
         "time_step":                          1.0e-5,
         "model_import_settings":              {
             "input_type":       "mdpa",
