--- a/poromechanics/use_cases/consolidation_interface_3D/source/ProjectParameters.json
+++ b/poromechanics/use_cases/consolidation_interface_3D/source/ProjectParameters.json
@@ -26,14 +26,14 @@
         "reform_dofs_at_each_step":           false,
         "nodal_smoothing":                    true,
         "block_builder":                      true,
-        "solution_type":                      "Quasi-Static",
+        "solution_type":                      "quasi_static",
         "scheme_type":                        "Newmark",
         "newmark_beta":                       0.25,
         "newmark_gamma":                      0.5,
         "newmark_theta":                      0.5,
         "rayleigh_m":                         0.0,
         "rayleigh_k":                         0.0,
-        "strategy_type":                      "Newton-Raphson",
+        "strategy_type":                      "newton_raphson",
         "convergence_criterion":              "And_criterion",
         "displacement_relative_tolerance":    1.0E-4,
         "displacement_absolute_tolerance":    1.0E-9,
