--- a/structural_mechanics/use_cases/periodic_bc_example/source/ProjectParameters.json
+++ b/structural_mechanics/use_cases/periodic_bc_example/source/ProjectParameters.json
@@ -50,62 +50,64 @@
         "processes_sub_model_part_list"      : ["DISPLACEMENT_fixedAxis","PointLoad3D_forceOuter"],
         "rotation_dofs"                      : false
     },
-    "constraints_process_list" : [{
-        "python_module" : "assign_vector_variable_process",
-        "kratos_module" : "KratosMultiphysics",
-        "help"          : "This process fixes the selected components of a given vector variable",
-        "process_name"  : "AssignVectorVariableProcess",
-        "Parameters"    : {
-            "mesh_id"         : 0,
-            "model_part_name" : "DISPLACEMENT_fixedAxis",
-            "variable_name"   : "DISPLACEMENT",
-            "value"           : [0.0,0.0,0.0],
-            "interval"        : [0.0,"End"]
-        }
-    }],
-    "loads_process_list"       : [{
-        "python_module" : "assign_vector_by_direction_to_condition_process",
-        "kratos_module" : "KratosMultiphysics",
-        "help"          : "This process sets a vector variable value over a condition",
-        "check"         : "DirectorVectorNonZero direction",
-        "process_name"  : "AssignModulusAndDirectionToConditionsProcess",
-        "Parameters"    : {
-            "mesh_id"         : 0,
-            "model_part_name" : "PointLoad3D_forceOuter",
-            "variable_name"   : "POINT_LOAD",
-            "modulus"         : 0.0,
-            "direction"       : [1.0,0.0,0.0],
-            "interval"        : [0.0,"End"]
-        }
-    },{
-        "python_module" : "apply_periodic_condition_process",
-        "kratos_module" : "KratosMultiphysics",
-        "process_name"  : "ApplyPeriodicBoundaryConditionProcess",
-        "Parameters"    : {
-            "computing_model_part_name"   : "computing_domain",
-            "model_part_name"             : "Structure",
-            "first_model_part_name"       : "GENERIC_horiSurface",
-            "second_model_part_name"      : "GENERIC_vertSurface",
-            "interval"                    : [0.0, 1e30],
-            "variable_names"              : ["DISPLACEMENT"],
-            "transformation_settings"     :{
-                "rotation_settings":{
-                    "center"                      : [0.0,0.0,0.0],
-                    "axis_of_rotation"            : [0.0,0.0,1.0],
-                    "angle_degree"                : 90.0
+    "processes" : {
+        "constraints_process_list" : [{
+            "python_module" : "assign_vector_variable_process",
+            "kratos_module" : "KratosMultiphysics",
+            "help"          : "This process fixes the selected components of a given vector variable",
+            "process_name"  : "AssignVectorVariableProcess",
+            "Parameters"    : {
+                "mesh_id"         : 0,
+                "model_part_name" : "DISPLACEMENT_fixedAxis",
+                "variable_name"   : "DISPLACEMENT",
+                "value"           : [0.0,0.0,0.0],
+                "interval"        : [0.0,"End"]
+            }
+        }],
+        "loads_process_list"       : [{
+            "python_module" : "assign_vector_by_direction_to_condition_process",
+            "kratos_module" : "KratosMultiphysics",
+            "help"          : "This process sets a vector variable value over a condition",
+            "check"         : "DirectorVectorNonZero direction",
+            "process_name"  : "AssignModulusAndDirectionToConditionsProcess",
+            "Parameters"    : {
+                "mesh_id"         : 0,
+                "model_part_name" : "PointLoad3D_forceOuter",
+                "variable_name"   : "POINT_LOAD",
+                "modulus"         : 0.0,
+                "direction"       : [1.0,0.0,0.0],
+                "interval"        : [0.0,"End"]
+            }
+        },{
+            "python_module" : "apply_periodic_condition_process",
+            "kratos_module" : "KratosMultiphysics",
+            "process_name"  : "ApplyPeriodicBoundaryConditionProcess",
+            "Parameters"    : {
+                "computing_model_part_name"   : "computing_domain",
+                "model_part_name"             : "Structure",
+                "first_model_part_name"       : "GENERIC_horiSurface",
+                "second_model_part_name"      : "GENERIC_vertSurface",
+                "interval"                    : [0.0, 1e30],
+                "variable_names"              : ["DISPLACEMENT"],
+                "transformation_settings"     :{
+                    "rotation_settings":{
+                        "center"                      : [0.0,0.0,0.0],
+                        "axis_of_rotation"            : [0.0,0.0,1.0],
+                        "angle_degree"                : 90.0
 
-                }
-            },
-           "search_settings":{
-                    "max_results":100,
-                    "tolerance": 1E-2
-           }
-        }
-    }],
+                    }
+                },
+            "search_settings":{
+                        "max_results":100,
+                        "tolerance": 1E-2
+            }
+            }
+        }]
+    },
     "output_configuration"     : {
         "result_file_configuration" : {
             "gidpost_flags"       : {
-                "GiDPostMode"           : "GiD_PostAscii",
+                "GiDPostMode"           : "GiD_PostBinary",
                 "WriteDeformedMeshFlag" : "WriteDeformed",
                 "WriteConditionsFlag"   : "WriteConditions",
                 "MultiFileFlag"         : "SingleFile"
@@ -121,18 +123,5 @@
             "gauss_point_results" : ["VON_MISES_STRESS"]
         },
         "point_data_configuration"  : []
-    },
-    "restart_options"          : {
-        "SaveRestart"      : false,
-        "RestartFrequency" : 0,
-        "LoadRestart"      : false,
-        "Restart_Step"     : 0
-    },
-    "constraints_data"         : {
-        "incremental_load"         : false,
-        "incremental_displacement" : false
-    },
-    "material_import_settings" : {
-        "materials_filename" : "StructuralMaterials.json"
     }
 }
