--- a/fluid_dynamics/use_cases/kelvin_helmholtz_instability/source/ProjectParameters.json
+++ b/fluid_dynamics/use_cases/kelvin_helmholtz_instability/source/ProjectParameters.json
@@ -6,26 +6,6 @@
         "start_time"      : 0.0,
         "end_time"        : 10.0
     },
-    "output_configuration"             : {
-        "result_file_configuration" : {
-            "gidpost_flags"       : {
-                "GiDPostMode"           : "GiD_PostBinary",
-                "WriteDeformedMeshFlag" : "WriteDeformed",
-                "WriteConditionsFlag"   : "WriteConditions",
-                "MultiFileFlag"         : "SingleFile"
-            },
-            "file_label"          : "step",
-            "output_control_type" : "step",
-            "output_frequency"    : 1.0,
-            "body_output"         : true,
-            "node_output"         : false,
-            "skin_output"         : false,
-            "plane_output"        : [],
-            "nodal_results"       : ["VELOCITY","PRESSURE"],
-            "gauss_point_results" : ["VORTICITY"]
-        },
-        "point_data_configuration"  : []
-    },
     "solver_settings"                  : {
         "model_part_name"              : "MainModelPart",
         "domain_size"                  : 2,
@@ -157,5 +137,37 @@
             }
             }
         }]
-    }
+    },
+    "output_processes" 	:	{
+        "gid_output" : [{
+            "python_module" : "gid_output_process",
+            "kratos_module" : "KratosMultiphysics",
+            "process_name"  : "GiDOutputProcess",
+            "help"          : "This process writes postprocessing files for GiD",
+            "Parameters"    : {
+                "model_part_name"        : "MainModelPart",
+                "output_name"            : "FluidKelvinJHelmholtz",
+                "postprocess_parameters" : {
+                    "result_file_configuration" : {
+                        "gidpost_flags"       : {
+                            "GiDPostMode"           : "GiD_PostBinary",
+                            "WriteDeformedMeshFlag" : "WriteDeformed",
+                            "WriteConditionsFlag"   : "WriteConditions",
+                            "MultiFileFlag"         : "SingleFile"
+                        },
+                        "file_label"          : "step",
+                        "output_control_type" : "step",
+                        "output_frequency"    : 1.0,
+                        "body_output"         : true,
+                        "node_output"         : false,
+                        "skin_output"         : false,
+                        "plane_output"        : [],
+                        "nodal_results"       : ["VELOCITY","PRESSURE"],
+                        "gauss_point_results" : ["VORTICITY"]
+                    },
+                    "point_data_configuration"  : []
+                }
+            }
+        }]
+	}
 }
