--- a/poromechanics/use_cases/consolidation_interface_3D/source/ProjectParameters.json
+++ b/poromechanics/use_cases/consolidation_interface_3D/source/ProjectParameters.json
@@ -5,11 +5,12 @@
         "end_time":             1.0,
         "echo_level":           1,
         "parallel_type":        "OpenMP",
-        "number_of_threads":    1
+        "number_of_threads":    1,
+        "fracture_utility":     false
     },
     "solver_settings": {
         "solver_type":                        "poromechanics_U_Pw_solver",
-        "model_part_name":                    "PorousDomain",
+        "model_part_name":                    "PorousModelPart",
         "domain_size":                        3,
         "start_time":                         0.0,
         "time_step":                          0.01,
@@ -59,112 +60,119 @@
         "processes_sub_model_part_list":      ["Solid_Displacement-auto-1","Solid_Displacement-auto-2","Fluid_Pressure-auto-1","Fluid_Pressure-auto-2","Face_Load-auto-1","Normal_Fluid_Flux-auto-1","Body_Acceleration-auto-1"],
         "body_domain_sub_model_part_list":    ["Body_Part-auto-1"]
     },
-    "output_configuration": {
-        "result_file_configuration": {
-            "gidpost_flags":       {
-                "WriteDeformedMeshFlag": "WriteUndeformed",
-                "WriteConditionsFlag":   "WriteElementsOnly",
-                "GiDPostMode":           "GiD_PostBinary",
-                "MultiFileFlag":         "SingleFile"
-            },
-            "file_label":          "step",
-            "output_control_type": "step",
-            "output_frequency":    1,
-            "body_output":         true,
-            "node_output":         false,
-            "skin_output":         false,
-            "plane_output":        [],
-            "nodal_results":       ["DISPLACEMENT","WATER_PRESSURE","FACE_LOAD","NODAL_CAUCHY_STRESS_TENSOR"],
-            "gauss_point_results": ["CAUCHY_STRESS_TENSOR","TOTAL_STRESS_TENSOR"]
-        },
-        "point_data_configuration":  []
+    "output_processes": {
+        "gid_output": [{
+            "python_module": "gid_output_process",
+            "kratos_module": "KratosMultiphysics",
+            "process_name": "GiDOutputProcess",
+            "Parameters":    {
+                "model_part_name": "PorousModelPart.porous_computational_model_part",
+                "output_name": "consolidation_interface_3D",
+                "postprocess_parameters": {
+                    "result_file_configuration": {
+                        "gidpost_flags":       {
+                            "WriteDeformedMeshFlag": "WriteUndeformed",
+                            "WriteConditionsFlag":   "WriteElementsOnly",
+                            "GiDPostMode":           "GiD_PostBinary",
+                            "MultiFileFlag":         "SingleFile"
+                        },
+                        "file_label":          "step",
+                        "output_control_type": "step",
+                        "output_frequency":    1,
+                        "body_output":         true,
+                        "node_output":         false,
+                        "skin_output":         false,
+                        "plane_output":        [],
+                        "nodal_results":       ["DISPLACEMENT","WATER_PRESSURE","FACE_LOAD","NODAL_CAUCHY_STRESS_TENSOR"],
+                        "gauss_point_results": ["CAUCHY_STRESS_TENSOR","TOTAL_STRESS_TENSOR"]
+                    },
+                    "point_data_configuration":  []
+                }
+            }
+        }]
     },
-    "constraints_process_list": [{
-        "python_module": "apply_vector_constraint_table_process",
-        "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
-        "process_name":  "ApplyVectorConstraintTableProcess",
-        "Parameters":    {
-            "model_part_name": "Solid_Displacement-auto-2",
-            "variable_name":   "DISPLACEMENT",
-            "active":          [true,true,false],
-            "is_fixed":        [true,true,false],
-            "value":           [0.0,0.0,0.0],
-            "table":           [0,0,0]
-        }
-    },{
-        "python_module": "apply_vector_constraint_table_process",
-        "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
-        "process_name":  "ApplyVectorConstraintTableProcess",
-        "Parameters":    {
-            "model_part_name": "Solid_Displacement-auto-1",
-            "variable_name":   "DISPLACEMENT",
-            "active":          [true,true,true],
-            "is_fixed":        [true,true,true],
-            "value":           [0.0,0.0,0.0],
-            "table":           [0,0,0]
-        }
-    },{
-        "python_module": "apply_scalar_constraint_table_process",
-        "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
-        "process_name":  "ApplyScalarConstraintTableProcess",
-        "Parameters":    {
-            "model_part_name":      "Fluid_Pressure-auto-2",
-            "variable_name":        "WATER_PRESSURE",
-            "is_fixed":             false,
-            "value":                0.0,
-            "table":                0,
-            "hydrostatic":          true,
-            "gravity_direction":    2,
-            "reference_coordinate": 1.0,
-            "specific_weight":      10000.0
-        }
-    },{
-        "python_module": "apply_scalar_constraint_table_process",
-        "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
-        "process_name":  "ApplyScalarConstraintTableProcess",
-        "Parameters":    {
-            "model_part_name":      "Fluid_Pressure-auto-1",
-            "variable_name":        "WATER_PRESSURE",
-            "is_fixed":             true,
-            "value":                0.0,
-            "table":                0,
-            "hydrostatic":          false,
-            "gravity_direction":    2,
-            "reference_coordinate": 0.0,
-            "specific_weight":      10000.0
-        }
-    }],
-    "loads_process_list": [{
-        "python_module": "apply_vector_constraint_table_process",
-        "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
-        "process_name":  "ApplyVectorConstraintTableProcess",
-        "Parameters":    {
-            "model_part_name": "Face_Load-auto-1",
-            "variable_name":   "FACE_LOAD",
-            "active":          [false,false,true],
-            "value":           [0.0,0.0,-10000.0],
-            "table":           [0,0,0]
-        }
-    },{
-        "python_module": "apply_scalar_constraint_table_process",
-        "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
-        "process_name":  "ApplyScalarConstraintTableProcess",
-        "Parameters":    {
-            "model_part_name": "Normal_Fluid_Flux-auto-1",
-            "variable_name":   "NORMAL_FLUID_FLUX",
-            "value":           0.0,
-            "table":           0
-        }
-    },{
-        "python_module": "apply_vector_constraint_table_process",
-        "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
-        "process_name":  "ApplyVectorConstraintTableProcess",
-        "Parameters":    {
-            "model_part_name": "Body_Acceleration-auto-1",
-            "variable_name":   "VOLUME_ACCELERATION",
-            "active":          [false,false,true],
-            "value":           [0.0,0.0,-10.0],
-            "table":           [0,0,0]
-        }
-    }]
+    "processes": {
+        "constraints_process_list": [{
+            "python_module": "apply_vector_constraint_table_process",
+            "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
+            "Parameters":    {
+                "model_part_name": "PorousModelPart.Solid_Displacement-auto-2",
+                "variable_name":   "DISPLACEMENT",
+                "active":          [true,true,false],
+                "is_fixed":        [true,true,false],
+                "value":           [0.0,0.0,0.0],
+                "table":           [0,0,0]
+            }
+        },{
+            "python_module": "apply_vector_constraint_table_process",
+            "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
+            "Parameters":    {
+                "model_part_name": "PorousModelPart.Solid_Displacement-auto-1",
+                "variable_name":   "DISPLACEMENT",
+                "active":          [true,true,true],
+                "is_fixed":        [true,true,true],
+                "value":           [0.0,0.0,0.0],
+                "table":           [0,0,0]
+            }
+        },{
+            "python_module": "apply_scalar_constraint_table_process",
+            "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
+            "Parameters":    {
+                "model_part_name":      "PorousModelPart.Fluid_Pressure-auto-2",
+                "variable_name":        "WATER_PRESSURE",
+                "is_fixed":             false,
+                "value":                0.0,
+                "table":                0,
+                "hydrostatic":          true,
+                "gravity_direction":    2,
+                "reference_coordinate": 1.0,
+                "specific_weight":      10000.0
+            }
+        },{
+            "python_module": "apply_scalar_constraint_table_process",
+            "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
+            "Parameters":    {
+                "model_part_name":      "PorousModelPart.Fluid_Pressure-auto-1",
+                "variable_name":        "WATER_PRESSURE",
+                "is_fixed":             true,
+                "value":                0.0,
+                "table":                0,
+                "hydrostatic":          false,
+                "gravity_direction":    2,
+                "reference_coordinate": 0.0,
+                "specific_weight":      10000.0
+            }
+        }],
+        "loads_process_list": [{
+            "python_module": "apply_vector_constraint_table_process",
+            "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
+            "Parameters":    {
+                "model_part_name": "PorousModelPart.Face_Load-auto-1",
+                "variable_name":   "FACE_LOAD",
+                "active":          [false,false,true],
+                "value":           [0.0,0.0,-10000.0],
+                "table":           [0,0,0]
+            }
+        },{
+            "python_module": "apply_scalar_constraint_table_process",
+            "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
+            "Parameters":    {
+                "model_part_name": "PorousModelPart.Normal_Fluid_Flux-auto-1",
+                "variable_name":   "NORMAL_FLUID_FLUX",
+                "value":           0.0,
+                "table":           0
+            }
+        },{
+            "python_module": "apply_vector_constraint_table_process",
+            "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
+            "Parameters":    {
+                "model_part_name": "PorousModelPart.Body_Acceleration-auto-1",
+                "variable_name":   "VOLUME_ACCELERATION",
+                "active":          [false,false,true],
+                "value":           [0.0,0.0,-10.0],
+                "table":           [0,0,0]
+            }
+        }],
+        "auxiliar_process_list": []
+    }
 }
