hotfix for bucket tests

--- a/dem/use_cases/bucket/uniform_3.gid/ProjectParametersDEM.json
+++ b/dem/use_cases/bucket/uniform_3.gid/ProjectParametersDEM.json
@@ -24,6 +24,11 @@
 "CleanIndentationsOption"          : false,
 "RemoveBallsInEmbeddedOption"      : true,
 
+"strategy_parameters"            : {
+            "RemoveBallsInitiallyTouchingWalls" : false,
+            "strategy"                          : "sphere_strategy"
+        },
+
 "DeltaOption"                      : "Absolute",
 "SearchTolerance"                  : 0.0,
 "AmplifiedSearchRadiusExtension"   : 0.0,
