--- a/dem/use_cases/bucket/non_uniform_2.gid/ProjectParametersDEM.json
+++ b/dem/use_cases/bucket/non_uniform_2.gid/ProjectParametersDEM.json
@@ -23,6 +23,10 @@
 "RotationOption"                   : true,
 "CleanIndentationsOption"          : false,
 "RemoveBallsInEmbeddedOption"      : true,
+"strategy_parameters"            : {
+            "RemoveBallsInitiallyTouchingWalls" : false,
+            "strategy"                          : "sphere_strategy"
+        },
 
 "DeltaOption"                      : "Absolute",
 "SearchTolerance"                  : 0.0,
