--- a/mmg_remeshing_examples/use_cases/beam2D/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/beam2D/source/ProjectParameters.json
@@ -43,7 +43,7 @@
             "process_name"  : "AssignVectorVariableProcess",
             "Parameters"    : {
                 "mesh_id"         : 0,
-                "model_part_name" : "DISPLACEMENT_Displacement_Auto1",
+                "model_part_name" : "Structure.DISPLACEMENT_Displacement_Auto1",
                 "variable_name"   : "DISPLACEMENT",
                 "value"           : [0.0,0.0,0.0],
                 "interval"        : [0.0,"End"]
@@ -57,7 +57,7 @@
             "process_name"  : "AssignVectorVariableProcess",
             "Parameters"    : {
                 "mesh_id"         : 0,
-                "model_part_name" : "SelfWeight2D_Self_weight_Auto1",
+                "model_part_name" : "Structure.SelfWeight2D_Self_weight_Auto1",
                 "variable_name"   : "VOLUME_ACCELERATION",
                 "value"           : [0.0,-9.81,0.0],
                 "interval"        : [0.0,"End"]
