Update results for new configuration

--- a/mmg_remeshing_examples/use_cases/beam2D_internal_interpolation/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/beam2D_internal_interpolation/source/ProjectParameters.json
@@ -104,7 +104,7 @@
                     "interpolation"                    : "Linear"
                 },
                 "echo_level"                        : 0,
-                "debug_mode"                        : false
+                "debug_mode"                        : "VTK"
             }
         }
         ]
