--- a/mmg_remeshing_examples/use_cases/hertz_hessian/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/hertz_hessian/source/ProjectParameters.json
@@ -164,7 +164,7 @@
                 "condition_flags"                    : ["ACTIVE","SLAVE","INTERFACE"],
                 "element_data_value_variables"       : [],
                 "condition_data_value_variables"     : [],
-                "gauss_point_variables"              : ["VON_MISES_STRESS","STRAIN_ENERGY"]
+                "gauss_point_variables_extrapolated_to_nodes"              : ["VON_MISES_STRESS","STRAIN_ENERGY"]
             }
         }]
     }
