--- a/mmg_remeshing_examples/use_cases/hertz_hessian/source/ProjectParameters_spr.json
+++ b/mmg_remeshing_examples/use_cases/hertz_hessian/source/ProjectParameters_spr.json
@@ -178,7 +178,7 @@
                 "condition_flags"                    : ["ACTIVE","SLAVE"],
                 "element_data_value_variables"       : [],
                 "condition_data_value_variables"     : [],
-                "gauss_point_variables"              : ["VON_MISES_STRESS","ERROR_INTEGRATION_POINT"]
+                "gauss_point_variables_extrapolated_to_nodes"              : ["VON_MISES_STRESS","ERROR_INTEGRATION_POINT"]
             }
         }]
     }
