--- a/mmg_remeshing_examples/use_cases/beam2D/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/beam2D/source/ProjectParameters.json
@@ -149,7 +149,7 @@
                 "nodal_data_value_variables"         : [],
                 "element_data_value_variables"       : [],
                 "condition_data_value_variables"     : [],
-                "gauss_point_variables"              : []
+                "gauss_point_variables_extrapolated_to_nodes"              : []
             }
         }]
     }
