--- a/mmg_remeshing_examples/use_cases/beam2D_internal_interpolation/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/beam2D_internal_interpolation/source/ProjectParameters.json
@@ -158,7 +158,7 @@
                 "nodal_data_value_variables"         : [],
                 "element_data_value_variables"       : [],
                 "condition_data_value_variables"     : [],
-                "gauss_point_variables"              : ["DAMAGE"]
+                "gauss_point_variables_extrapolated_to_nodes"              : ["DAMAGE"]
             }
         }]
     }
