--- a/mmg_remeshing_examples/use_cases/beam_spr/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/beam_spr/source/ProjectParameters.json
@@ -108,7 +108,7 @@
                 "nodal_data_value_variables"         : [],
                 "element_data_value_variables"       : [],
                 "condition_data_value_variables"     : [],
-                "gauss_point_variables"              : ["VON_MISES_STRESS","ERROR_INTEGRATION_POINT","STRAIN_ENERGY"]
+                "gauss_point_variables_extrapolated_to_nodes"              : ["VON_MISES_STRESS","ERROR_INTEGRATION_POINT","STRAIN_ENERGY"]
             }
         }]
     }
