--- a/mmg_remeshing_examples/use_cases/contact_spr/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/contact_spr/source/ProjectParameters.json
@@ -135,7 +135,7 @@
                 "nodal_flags"                        : ["ACTIVE","SLAVE","MASTER","CONTACT"],
                 "element_data_value_variables"       : [],
                 "condition_data_value_variables"     : [],
-                "gauss_point_variables"              : ["ERROR_INTEGRATION_POINT"]
+                "gauss_point_variables_extrapolated_to_nodes"              : ["ERROR_INTEGRATION_POINT"]
             }
         }]
     }
