--- a/mmg_remeshing_examples/use_cases/contacting_cylinders/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/contacting_cylinders/source/ProjectParameters.json
@@ -176,7 +176,7 @@
                 "element_flags"                      : [],
                 "condition_data_value_variables"     : [],
                 "condition_flags"                    : [],
-                "gauss_point_variables"              : ["VON_MISES_STRESS","STRAIN_ENERGY"]
+                "gauss_point_variables_extrapolated_to_nodes"              : ["VON_MISES_STRESS","STRAIN_ENERGY"]
             }
         }]
     }
