--- a/dem/use_cases/bucket/uniform_3.gid/ProjectParametersDEM.json
+++ b/dem/use_cases/bucket/uniform_3.gid/ProjectParametersDEM.json
@@ -23,8 +23,7 @@
 "RotationOption"                   : true,
 "CleanIndentationsOption"          : false,
 "RemoveBallsInEmbeddedOption"      : true,
-
-"strategy_parameters"            : {
+"solver_settings" : {
             "RemoveBallsInitiallyTouchingWalls" : false,
             "strategy"                          : "sphere_strategy"
         },
